2014-07-18  Eero Simoncelli  <eero@olympia.cns.nyu.edu>

	* spikesort_demo/SpikesortCBP.m: 
	Added waveforms argument to this function, and removed the cbp_outer.init_features parameter

	* spikesort_demo/preproc/plotting/VisualizeClustering.m:
	indicate centroids in scatter plot
	display of waveforms/traces for multi-electrodes offset
	match color scheme in clustering scatter and waveform plots
	use same y-axis scaling for all waveforms

	* spikesort_demo/preproc/EstimateInitialWaveforms.m (peak_idx): 
	princomp is being discontinued.  Switched to call pca
	don't re-center (subtract mean) when doing  PCA
	make waveform_len odd
	
	* spikesort_demo/preproc/FilterData.m (data): 
	added histograms of raw data

2014-07-17  Peter Li

	* put another Harris dataset into the example_data directory
	* re-activated greedy solution for speedup
	
2014-07-16  Eero Simoncelli  <eero@olympia.cns.nyu.edu>

	* spikesort_demo/preproc/PartitionSignal.m (signal_rms): 
	fixed bug introduced yesterday when changing parameterization...
	
2014-07-15  Eero Simoncelli  <eero@olympia.cns.nyu.edu>

	* spikesort_demo/preproc/plotting/VisualizeClustering.m: 
	got rid of the second fignum argument (always make them consecutive)
	added threshold argument 

	* spikesort_demo/preproc/PartitionSignal.m (snippet_centers): 
	partition.threshold -> partition.silence_threshold
	partition.min_separation_len -> partition.min_silence_len
	
	* spikesort_demo/preproc/EstimateInitialWaveforms.m (threshold): 
	-> Changed to just use threshold as is (compared directly to rms over channels);
	
	* spikesort_demo/load_default_parameters.m: 
	-> clustering.threshold -> clustering.spike_threshold,  value changed to 6
	
2014-07-14  Eero Simoncelli  <eero@olympia.cns.nyu.edu>

	* spikesort_demo/spikesort_demo_setup.m: 
	Switched matlabpool calls to use parpool (matlabpool is being discontinued)

	* spikesort_demo/cbp_spikesort_demo_script.m (params): 